@@ -23,6 +23,10 @@ Michael Voigt
   Jackdmp changes log
 ---------------------------
 
+2008-11-19 Stephane Letz  <letz@grame.fr>
+
+	* Libjack shutdown handler does not "deactivate" (fActive = false) the client anymore, so that jack_deactivate correctly does the job later on.
+
 2008-11-14 Stephane Letz  <letz@grame.fr>
 
 	* Version 1.9.1 started, fix symbols export in ringbuffer.c, cleanup on Windows.
